# GameOfThomas

./: CMakeLists.txt  README.md
src/: DevMode.cpp  DevMode.hpp  main.cpp
src/blocks/: Block.hpp  BlockEnum.hpp  BlockTypeUtils.hpp  BottomExitBlock.hpp  ExitBlock.cpp  ExitBlock.hpp  LeftBottomExitBlock.hpp  LeftExitBlock.cpp  LeftExitBlock.hpp  LeftRightBottomExitBlock.hpp  LeftRightExitBlock.hpp  LeftTopBottomExitBlock.hpp  LeftTopExitBlock.hpp  LeftTopRightBottomExitBlock.hpp  LeftTopRightExitBlock.hpp  RightBottomExitBlock.hpp  RightExitBlock.hpp  TopBottomExitBlock.hpp  TopExitBlock.hpp  TopRightBottomExitBlock.hpp  TopRightExitBlock.hpp
src/characters/: Candle.cpp  Candle.hpp  Direction.hpp  FONCTIONNEMENT_IA.md  GameCharacter.cpp  GameCharacter.cpp.bak  GameCharacter.hpp  NonPlayer.cpp  NonPlayer.hpp  Player.cpp  Player.hpp
src/environnement/: Ground.cpp  Ground.hpp  LadderGround.cpp  LadderGround.hpp  ModelGenerator.cpp  ModelGenerator.hpp  Node.cpp  Node.hpp  TexturedGround.cpp  TexturedGround.hpp
src/events/: Event.hpp  EventManager.cpp  EventManager.hpp  MoveEvent.cpp  MoveEvent.hpp
src/factories/: BlockFactory.cpp  BlockFactory.hpp  CharacterFactory.cpp  CharacterFactory.hpp  GroundFactory.cpp  GroundFactory.hpp
src/items/: DamageAmulet.cpp  DamageAmulet.hpp  HealthAmulet.cpp  HealthAmulet.hpp  HealthPotion.cpp  HealthPotion.hpp  Item.hpp  ManaPotion.cpp  ManaPotion.hpp
src/objects/: Chest.cpp  Chest.hpp  Door.cpp  Door.hpp  Object.cpp  Object.hpp
src/tools/: debug_maze.cpp
src/ui/: CameraShake.cpp  CameraShake.hpp  InventoryMenu.cpp  InventoryMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  UIManager.cpp  UIManager.hpp  UIManagerNotifications.cpp
